# isolated-temporal-kplex

./: CMakeLists.txt  LICENSE
datasets/: static_hsfb13.txt  static_infectious_2009_04_28.txt  static_infectious_2009_05_03.txt  static_infectious_2009_07_15.txt  temporal_highschool_2011.csv  temporal_primaryschool_2015.csv
datasets/test/: build_dataset.py  graph1.txt  graph2.txt  graph3.txt  graph5.txt  graph6.txt  preprocess_sociopatterns.py  temporal_1.csv
inc/: Graph.hpp  conf.hpp  isolation_scliques.hpp  isolation_splexes.hpp  isolation_tplexes.hpp  utils.hpp
src/: main.cpp
src/lib/: SGraph.cpp  TGraph.cpp  avg_c_isolated_kplex.cpp  isolation_tplexes.cpp  max_c_isolated_clique.cpp  max_c_isolated_kplex.cpp  min_bdd.cpp  min_c_isolated_clique.cpp  min_c_isolated_kplex.cpp  utils.cpp  vertex_cover.cpp
